persoonlijke doelen toegevoegd etc hieke

--- a/hieke_ontwikkeling.html
+++ b/hieke_ontwikkeling.html
@@ -44,7 +44,11 @@
             <h4>Je toont veel initiatief en betrokkenheid</h4>
             <p>Binnen de komende 5 maanden zal ik mijn leervermogen verbeteren door actief feedback en zelfreflectie te integreren in mijn dagelijkse taken, meetbaar aan de hand van regelmatige evaluaties en aanpassingen om mijn professionele ontwikkeling te bevorderen.
             </p>
-            <p>2e kopje
+            <p>Recentelijk heb ik succesvol betrokkenheid binnen mijn groep en tijdens de lessen van de minor gedemonstreerd.
+                Mijn bijdrage was opvallend, met actieve deelname aan kleine opdrachten tijdens de lessen en het initiëren van leiderschap wanneer anderen vastliepen bij het bepalen van onze koers.
+                De feedback van mijn groep bij Giesbers bevestigde dit, waarbij ik hoorde dat mijn leiderschapsrol tijdens de interviews zeer gewaardeerd werd.
+                Zelfs in momenten van stilte wist ik snel het voortouw te nemen en de interactie weer op gang te brengen.
+                Dit succes bevestigt mijn toewijding aan effectieve samenwerking en leiderschap, wat mijn persoonlijke doel was binnen dit project.
             </p>
 
             <h4>Je meningen zijn of adviezen zijn gebasseerd op gedegen onderzoek</h4>
@@ -68,7 +72,11 @@
             <h4>Je gebruikt feedback en zelfreflectie om te leren</h4>
             <p>Binnen de komende 5 maanden zal ik mijn leervermogen verbeteren door actief feedback en zelfreflectie te integreren in mijn dagelijkse taken, meetbaar aan de hand van regelmatige evaluaties en aanpassingen om mijn professionele ontwikkeling te bevorderen.
             </p>
-            <p>2e kopje
+            <p> Met name gedurende de periode waarin ik met mijn groep bij Giesbers werkzaam was, heb ik talrijke mogelijkheden benut om mijn vaardigheden te verbeteren.
+                Tijdens overlegmomenten met Nigel en Dries heb ik herhaaldelijk zowel persoonlijk als professioneel advies gevraagd.
+                Een waardevolle tip die ik ontving, was om tijdens presentaties geen verkleinwoorden te gebruiken.
+                Dries benadrukte dat deze verkleinwoorden niet noodzakelijk zijn en de presentatie juist verzwakken.
+                Deze feedback zal ik integreren in mijn toekomstige presentaties, met als resultaat een versterking van mijn presentatievaardigheden.
             </p>
 
             <h4>Je helpt andere actief groeien</h4>
