--- a/hieke_workshops.html
+++ b/hieke_workshops.html
@@ -68,8 +68,19 @@
             <h2>Smart Technology</h2>
             <p> inleiding
             </p>
-                <h4>Onderwerp</h4>
-                    <p> 1e kopje
+                <h4>Project plant</h4>
+                    <p> In de eerste les van Smart Technologie werden we direct voorgesteld aan ons nieuwe project: het ontwerpen en programmeren van een geautomatiseerd plantbewateringssysteem met behulp van Visual Studio.
+                        Daarnaast was het plan om ook een 3D-behuizing voor het systeem te printen in latere lessen.
+                        Ik raakte enthousiast omdat we iets gingen maken dat we letterlijk in handen konden houden wanneer het af was.
+                        Tijdens de eerste les, waarbij we programmeerprincipes combineerden met het praktisch in elkaar zetten van het systeem, verliep het proces erg vlot.
+                        Hierdoor kon ik anderen naast me actief helpen wanneer ze vastliepen, wat bijdroeg aan een gezamenlijke groei in begrip en vaardigheden.
+                    </p>
+                    <p> Daarna maakte ik voor het eerst kennis met Eagle.
+                        In dit programma werkten we aan het ontwerpen van een compleet printplaatje dat we uiteindelijk moesten inleveren.
+                        We moesten zelf het systeem programmeren en het binnen bepaalde afmetingen ontwerpen.
+                        Ik ging de uitdaging met mezelf aan om de kleinste printplaat van de hele klas te maken.
+                        Nadat het ontwerp klaar was, werden ze geproduceerd en ontvingen we er elk 10 terug.
+                        Het bleek dat ik inderdaad de kleinste printplaat had ontworpen.
                     </p>
                     
                 <h5>onderwerp</h5>
@@ -84,7 +95,11 @@
                 <p> Inleiding
                 </p>
                 <h4>onderwerp</h4>
-                    <p> 1e kopje
+                    <p> -	Tijdens de Smart Connection-les ben ik buiten mijn eigen vakgebied getreden en heb ik kennis gemaakt met HTML.
+                        Dit aspect staat haaks op mijn technische studie, wat mijn interesse in dit onderdeel van de minor heeft aangewakkerd.
+                        In de allereerste les slaagde ik er al in om een website aan te passen door video's en foto's toe te voegen, en tekst te wijzigen in grootte en dikte.
+                        Deze aanpassingen voerde ik uit door HTML-code toe te voegen of aan te passen in het programma Visual Studio Code.
+                        Deze ervaring heeft mijn begrip van het bouwen van websites aanzienlijk vergroot.
                     </p>
                     <p> In de onderstaande link is de door mij gemaakte site weergegeven:</p>
                     <p><a href="link toevoegen">Site les 1</a></p>
