links tkest afbeelding rechts hieke

--- a/hieke_workshops.html
+++ b/hieke_workshops.html
@@ -39,7 +39,7 @@
                 </p>
                     <p> 2e kopje
                     </p>
-         <img class="side" src="images/Impact van technologie.jpg" alt="Impact van technologie" width="300" height="200">  
+         <img class="side-hieke" src="images/Impact van technologie.jpg" alt="Impact van technologie" width="300" height="200">  
                     
                     
                 <h4>Business Model Canvas</h4>
