--- a/matilda_ontwikkeling.html
+++ b/matilda_ontwikkeling.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_matilda.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Include jquery to be able to reuse the navigation bar code -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -13,12 +14,30 @@
 
 <body id = Matilda>
 
-    <div class="header">
-        <h1>My Website</h1>
-        <p>A <b>responsive</b> website created by me.</p>
+    <div class="header ontwikkelingheader">
+        <div id="theDiv">
+            <h1>Matilda Kolijn</h1>
+            <p>Studentnummer: 1651412</br>Studie: Food & Business</br>Minor: Smart Industry</p>
+        </div>
     </div>
 
     <div id="nav-placeholder"></div>
+
+    <div class="ontwikkeling">
+        <div class="workshopimg">
+            <img src="images/Smart_me.png" alt="plaatje Smart Me">
+        </div>
+        <div class="description">
+            <h3>Smart Me</h3>
+            <p>Mijn persoonlijke professionele groei tijdens de Minor Smart Industry van 30 augustus 2023 tot en met 12 januari 2024.</p>
+            <a href="matilda/matilda_smartme.html" class="button">Lees meer</a>
+        </div>
+    </div>
+
+    <iframe src="files/placeholder.pdf" name="logboek">
+        <p>Deze browser ondersteunt geen iFrames.</p>
+        <p>Open deze <a href="files/placeholder.pdf" target="_blank">link</a> om mijn portfolio in te zien.</p>
+    </iframe>
 
     <script>
         $(function () {
