filmpje toegevoegd hieke workshop

--- a/hieke_workshops.html
+++ b/hieke_workshops.html
@@ -39,7 +39,8 @@
                     </p>
                     <p> 2e kopje
                     </p>
-                    <img class="logo" src="images/Impact van technologie.jpg" alt="Impact van technologie" width="300" height="200">  
+                    <img class="logo" src="images/Impact van technologie.jpg" alt="Impact van technologie" width="300" height="200"> 
+                    <img class="logo" src="https://youtu.be/v9rZOa3CUC8?si=jVcSVD9qbETT-EA1" alt="Impact van technologie" width="300" height="200">   
                     
                     
                 <h4>Business Model Canvas</h4>
