--- a/hieke_workshops.html
+++ b/hieke_workshops.html
@@ -40,6 +40,7 @@
                     <p> 2e kopje
                     </p>
                     <img class="logo" src="images/Impact van technologie.jpg" alt="Impact van technologie" width="300" height="200">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/v9rZOa3CUC8" frameborder="0" allowfullscreen></iframe>
                     
                 <h4>Business Model Canvas</h4>
                     <p> Tijdens een Smart Business-les kwam er een gastspreker die ons meenam in de structuur van een BMC (Business Model Canvas).
