tekst toegevoegd aan ontwikkeling hieke

--- a/hieke_ontwikkeling.html
+++ b/hieke_ontwikkeling.html
@@ -41,6 +41,9 @@
             <br>
 
             <h2>Competenties</h2>
+            <p> In dit hoofstuk geef ik aan welk doel ik mezelf had voorgelegd bij iedere competentie.
+                Daarna volgt of ik uiteindleijk dit doel heb behaald en zo ja, hoe?
+            </p>
             <h4>Je toont veel initiatief en betrokkenheid</h4>
             <p>Binnen de komende 5 maanden zal ik mijn leervermogen verbeteren door actief feedback en zelfreflectie te integreren in mijn dagelijkse taken, meetbaar aan de hand van regelmatige evaluaties en aanpassingen om mijn professionele ontwikkeling te bevorderen.
             </p>
@@ -54,19 +57,40 @@
             <h4>Je meningen zijn of adviezen zijn gebasseerd op gedegen onderzoek</h4>
             <p>Binnen de komende 5 maanden streef ik ernaar mijn meningen en adviezen te versterken door gedegen onderzoek toe te passen, gemeten aan de hand van regelmatige raadpleging van betrouwbare bronnen en die informatief actief te integreren, met als doel mijn professionele besluitvorming te verbeteren.
             </p>
-            <p>2e kopje
+            <p>Tijdens onze opdracht bij Giesbers heb ik de leiding genomen in het verkennen van diverse digitaliseringsmogelijkheden die relevant zijn voor het gebruik bij Giesbers.
+                Na uitvoerig onderzoek heb ik mijn bevindingen en aanbevelingen met mijn groep gedeeld, omdat ik alles van tevoren grondig had onderzocht en kon onderbouwen.
+                Tijdens onze besprekingen met Giesbers kon ik mijn eigen standpunt vormen op basis van de vooraf verzamelde informatie.
+                Hierdoor kon ik een krachtig overleg leiden en zijn we tot solide standpunten gekomen die ons hielpen bij het maken van weloverwogen keuzes met betrekking tot de meest geschikte digitaliseringsmogelijkheden voor Giesbers.
             </p>
 
             <h4>Je kiest ambitieuze leerdoelen en verkent disciplines buiten je eigen vakgebeid</h4>
             <p>In de komende 5 maanden wil ik mijn kennis van HTML verbeteren de lessen waarbij HTML gebruikt wordt aandachtig te volgen, met als uiteindelijk meetbaar resultaat het succesvol ontwerpen van een eenvoudige webpagina.
             </p>
-            <p>2e kopje
+            <p>In de Smart Connectie-lessen heb ik mijn eerste kennismaking gehad met HTML en de toepassingen ervan.
+                Ik heb stap voor stap geleerd hoe ik met HTML een website kan aanpassen en creëren, te beginnen met eenvoudige taken zoals het toevoegen van afbeeldingen of het vergroten van tekst.
+                Dit proces heb ik thuis verder geoefend, en door herhaalde lessen over HTML kon ik mijn vaardigheden steeds verder ontwikkelen.
+                Hierdoor heb ik een aanzienlijk deel van deze website opgezet met behulp van wat ik heb geleerd, door groepsgenoten en door zelf verder onderzoek te doen.
+            </p>
+            <p>Ik ben trots om te zeggen dat ik niet alleen mijn oorspronkelijke doel heb behaald, maar ook verder ben gegaan dan verwacht.
+                Naast HTML heb ik bijvoorbeeld ook CSS geleerd, wat de stijl van de website bepaalt, zoals kleuren en vormen etc.
+                Dit extra aspect heeft mijn begrip van webontwikkeling verrijkt en mijn vaardigheden naar een hoger niveau getild.
             </p>
 
             <h4>Je bent bewust bezig met je persoonlijke groei</h4>
             <p>Binnen de komende 5 maanden zal ik mijn bewuste betrokkenheid bij persoonlijke ontwikkeling vergroten door regelmatig zelfreflectie, het identificeren van specifieke groeikansen en actieve deelname aan relevante workshops, meetbaar aan de hand van het vastleggen van leerervaringen en behaalde persoonlijke mijlpalen.
             </p>
-            <p>2e kopje
+            <p>Tijdens mijn tijd bij Giesbers werd sterk benadrukt dat het naast het formele verslag ook belangrijk was om een persoonlijke reflectie bij te houden, waarin je jouw persoonlijke en professionele ontwikkeling beschrijft.
+                Ik heb dit advies opgevolgd en nu, terugkijkend, merk ik op dat ik aanzienlijke groei heb doorgemaakt, zowel op persoonlijk als professioneel vlak.
+            </p>
+            <p>Giesbers bood ons veel vrijheid en verantwoordelijkheid, wat ons de ruimte gaf om te experimenteren en soms fouten te maken, waaruit we waardevolle lessen uit hebben gehaald.
+                Bijvoorbeeld, tijdens het afnemen van interviews hebben we gemerkt dat de vooraf opgestelde vragen nauwelijks werden gebruikt.
+                Dit leerde me het belang van het formuleren van richtlijnvragen vooraf, waardoor je duidelijk weet wat je uit het interview wilt halen.
+                Hierdoor verlopen de gesprekken natuurlijker en vermijd je verspilling van tijd aan het bedenken van onnodige vragen van tevoren.
+            </p>
+            <p>Bovendien ben ik me sterk bewust van de verbetering van mijn presentatievaardigheden.
+                Binnen de minor heb ik vaak pitches en presentaties moeten geven, die elke keer gemakkelijker werden.
+                Naarmate het vlotter verliep, stond ik steeds zelfverzekerder voor de groep en begon ik de presentatie rustig en vloeiend te presenteren.
+                Het is opmerkelijk om te realiseren dat ik voorheen altijd nerveus voor de klas stond en vaak worstelde met mijn woorden.
             </p>
 
             <h4>Je gebruikt feedback en zelfreflectie om te leren</h4>
@@ -82,7 +106,11 @@
             <h4>Je helpt andere actief groeien</h4>
             <p>Binnen de komende 5 maanden zal ik mij actief inzetten om anderen te helpen groeien door regelmatig mijn kennis en ervaring te delen, meetbaar aan de hand van positieve feedback en waarneembare vooruitgang bij mijn collega's, met als doel een stimulerende bijdrage te leveren aan hun professionele ontwikkeling.
             </p>
-            <p>2e kopje
+            <p>Mijn expertise ligt binnen het technische gebied, en aanvankelijk daarvan kon ik bij Giesbers mijn ervaringen goed benutten omdat deze aansloten bij dit vakgebied.
+                Aan de andere kant had een van mijn groepsgenoten geen enkele voorkennis in dit vakgebied, waardoor ik haar kon bijstaan met inzichten door uitleg te geven over hoe het bouwproces doorgaans verloopt.
+                Bovendien heeft zij op mijn feedbackformulier aangegeven dat ik actief heb bijgedragen aan haar groei, met de opmerkingen: "Ik heb helemaal geen voorkennis en je toont begrip en legt goed uit als ik vragen heb" bij de competentie van actief anderen helpen met groeien.
+                Ook bij de competentie dat meningen en adviezen gebaseerd moeten zijn op gedegen onderzoek staat vermeld: "Voorkennis civiele techniek".
+                Deze feedback bevestigt voor mij dat mijn inspanningen daadwerkelijk vruchten hebben afgeworpen.
             </p>
         </div>
     </div>
