toevoeging ontwikkeling hieke

--- a/hieke_ontwikkeling.html
+++ b/hieke_ontwikkeling.html
@@ -61,6 +61,9 @@
                 Na uitvoerig onderzoek heb ik mijn bevindingen en aanbevelingen met mijn groep gedeeld, omdat ik alles van tevoren grondig had onderzocht en kon onderbouwen.
                 Tijdens onze besprekingen met Giesbers kon ik mijn eigen standpunt vormen op basis van de vooraf verzamelde informatie.
                 Hierdoor kon ik een krachtig overleg leiden en zijn we tot solide standpunten gekomen die ons hielpen bij het maken van weloverwogen keuzes met betrekking tot de meest geschikte digitaliseringsmogelijkheden voor Giesbers.
+                In de toekomst zal ik extra aandacht besteden aan het vermijden van overhaaste conclusies op basis van persoonlijke ervaringen of aannames.
+                Mijn focus zal liggen op een extra moment van reflectie en verdere onderzoek voordat ik een weloverwogen conclusie trek.
+                Deze aanpak werd ook aanbevolen in het feedbackformulier van mijn groepje, en ik ben van plan dit advies mee te nemen.
             </p>
 
             <h4>Je kiest ambitieuze leerdoelen en verkent disciplines buiten je eigen vakgebeid</h4>
@@ -101,6 +104,9 @@
                 Een waardevolle tip die ik ontving, was om tijdens presentaties geen verkleinwoorden te gebruiken.
                 Dries benadrukte dat deze verkleinwoorden niet noodzakelijk zijn en de presentatie juist verzwakken.
                 Deze feedback zal ik integreren in mijn toekomstige presentaties, met als resultaat een versterking van mijn presentatievaardigheden.
+                Tot slot ontving ik een waardevolle tip vanuit mijn groepje: "We zouden vaker aan elkaar feedback moeten vragen."
+                Bij terugblik op mijn tijd bij Giesbers ben ik het eens met deze suggestie; meer onderlinge feedback zou ons in staat hebben gesteld meer van elkaar te leren en onze individuele groei te bevorderen.
+                Deze les zal ik zeker meenemen in mijn toekomstige aanpak.
             </p>
 
             <h4>Je helpt andere actief groeien</h4>
