Pitstop presentatie toegevoegd aan smart project pagina

--- a/home.html
+++ b/home.html
@@ -33,12 +33,20 @@
         </div>
         <div class="main">
             <h2>Het onderzoeksrapport</h2>
+            <p>Het onderzoeksrapport voor Giesbers is hieronder te lezen.</p>
             <iframe src="files/placeholder_projectbrief.pdf" name="onderzoeksrapport">
                 <p>Deze browser ondersteunt geen iFrames.</p>
-                <p>Open deze <a href="files/placeholder_projectbrief.pdf" target="_blank">link</a> om het onderzoeksrapport in te zien.</p>
+                <p>Open deze <a href="files/placeholder_projectbrief.pdf" target="_blank">link</a> om het
+                    onderzoeksrapport in te zien.</p>
             </iframe>
-            <h2>Presentaties pitstops</h2>
-            <p>Linkjes naar presentaties pitstops?</p>
+
+            <h2>Presentatie pitstop</h2>
+            <p>De presentatie van de pitstop is hieronder terug te zien.</p>
+            <iframe src="files/Pitstop 13-12-2023.pdf#view=fitH" name="presentatie pitstop">
+                <p>Deze browser ondersteunt geen iFrames.</p>
+                <p>Open deze <a href="files/Pitstop 13-12-2023.pdf" target="_blank">link</a> om de pitstop presentatie
+                    in te zien.</p>
+            </iframe>
         </div>
     </div>
 
