nasa foto toegevoegd

--- a/hieke_workshops.html
+++ b/hieke_workshops.html
@@ -55,7 +55,7 @@
                     <p> 3e kopje
                     </p>
                     <img class="logo" src="images/Smartbox AXA.jpg" alt="Smartbox" width="300" height="200"> 
-                    
+
                  <h4>onderwerp</h4>
                     <p> 1e kopje
                     </p>
@@ -118,9 +118,9 @@
                         </iframe>
 
                         <h2>NASA photo of the day</h2>
-                        <iframe src="link toevoegen" name="NASA photo of the day">
+                        <iframe src="http://127.0.0.1:5500/Hieke/NASA%20foto%20van%20vandaag.html" name="NASA photo of the day">
                             <p>Deze browser ondersteunt geen iFrames.</p>
-                            <p>Open deze <a href="link toevoegen" target="_blank">link</a> om de NASA 
+                            <p>Open deze <a href="http://127.0.0.1:5500/Hieke/NASA%20foto%20van%20vandaag.html" target="_blank">link</a> om de NASA 
                                 photo of the day te zien.</p>
                         </iframe>
                     </div>
