--- a/hieke_workshops.html
+++ b/hieke_workshops.html
@@ -112,9 +112,9 @@
                     <p> In de onderstaande figuren is zowel het live weerbericht in Willemstad (Curaçoa) als de NASA foto van de dag:</p>
                     <div class="main-hieke">
                         <h2>Het weerstation</h2>
-                        <iframe src="link toevoegen" name="weerstation">
+                        <iframe src="http://127.0.0.1:5500/Hieke/Weerstation.html" name="weerstation">
                             <p>Deze browser ondersteunt geen iFrames.</p>
-                            <p>Open deze <a href="link toevoegen" target="_blank">link</a> om het weerstation in te zien.</p>
+                            <p>Open deze <a href="http://127.0.0.1:5500/Hieke/Weerstation.html" target="_blank">link</a> om het weerstation in te zien.</p>
                         </iframe>
 
                         <h2>NASA photo of the day</h2>
