--- a/Hieke/Weerstation.html
+++ b/Hieke/Weerstation.html
@@ -8,10 +8,10 @@
 
   body {
 	  font-family: 'Montserrat', sans-serif;
-	  font-weight: 400;
-	  font-size: 1.3em;
+	  font-weight: 600;
+	  font-size: 3cm;
 	  color: #fff;
-	  text-shadow: .1em .1em 0 rgba(0,0,0,0.3);
+	  text-shadow: .1em .1em 0 rgba(206, 40, 40, 0.963);
 	  height: 100vh;
 	  display: flex;
 	  align-items: center;
@@ -20,7 +20,7 @@
   }
   h1 {
 	  margin: 0 auto;
-	  font-size: 2.2em;
+	  font-size: 2cm;
 	  text-align: center;
 	  color: #fff;
 	  font-size: 5em;
@@ -29,7 +29,7 @@
 	  background-image: linear-gradient(to right top, #ff4e50, #ff713e, #ff932b, #ffb41d, #f9d423);
   }
   body.cloudy {
-	  background-image: linear-gradient(to right top, #63747c, #71858e, #7f96a0, #8da8b2, #9bbac5);
+	  background-image: linear-gradient(to right top, #a5240a, #cb931b, #dbf327, #1fad32, #1ce2dc);
   }
   body.rainy {
 	  background-image: linear-gradient(to right top, #637c7b, #718e8c, #7ea09e, #8db2b0, #9bc5c3);
