--- a/Hieke/Weerstation.html
+++ b/Hieke/Weerstation.html
@@ -8,7 +8,7 @@
 
   body {
 	  font-family: 'Montserrat', sans-serif;
-	  font-weight: 600;
+	  font-weight: 400;
 	  font-size: 3cm;
 	  color: #fff;
 	  text-shadow: .1em .1em 0 rgba(206, 40, 40, 0.963);
@@ -20,7 +20,7 @@
   }
   h1 {
 	  margin: 0 auto;
-	  font-size: 2cm;
+	  font-size: 2.2em;
 	  text-align: center;
 	  color: #fff;
 	  font-size: 5em;
