--- a/Hieke/Weerstation.html
+++ b/Hieke/Weerstation.html
@@ -9,7 +9,7 @@
 	body {
 		font-family: 'Montserrat', sans-serif;
 		font-weight: 400;
-		font-size: 1.3em;
+		font-size: 3cm;
 		color: #fff;
 		text-shadow: .1em .1em 0 rgba(0,0,0,0.3);
 		height: 100vh;
