--- a/tomas_workshops.html
+++ b/tomas_workshops.html
@@ -83,19 +83,64 @@
             <p> In dit hoofdstuk benoem ik wat ik geleerd heb gedurende de lessen Smart Technology. Ik pak een aantal onderwerpen er tussenuit omdat ik deze 
                 opvallend of leerzaam vind. 
             </p>
-                <h4>Title description, Sep 2, 2017</h4>
-                    <p> Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco.</p>
-                    
-                <h5>Title description, Sep 2, 2017</h5>
-                    <div class="fakeimg" style="height:200px;">Image</div>
-                    <p>Some text..</p>
-                    <p> Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco.</p>
+                <h4>Situation</h4>
+                <p> Voorafgaand aan de minor Smart Industry heb ik nog nooit te maken gehad met iets wat in de buurt komt van het programeren van een chip of
+                    iets dergelijks. Ik had totaal geen voorkennis als het gaat om het vak Smart Technology, het werken in SolidWorks, het maken van een 3D print
+                    en het programeren van een PCB was voor mij volledig nieuw. Ik heb dan ook veel vak inhoudelijke kennis gemist bij het werken aan deze 
+                    onderwerpen. 
+                </p>
 
+                <h4>Task</h4>
+                <p> De taak die mij gegeven werd voor het vak Smart Technology was het programeren van een PCB-chip, het doel van deze taak was het maken van 
+                    een systeem welke automatisch een plant voor je onderhoud. Het gaat hierbij om het watergeven en lichtgeven indien de plant dit nodig heeft. 
+                    Daarnaast moest ik zelf een printplaat ontwerpen voor dit systeem en voor de bruikbaarheid een omhulsel 3D printen waar de chip, de sensoren
+                    en de pomp en dergelijke in afgewerkt kan worden. 
+                </p>
 
+                <h4>Action</h4>
+                <p> Om tot het eind resultaat te komen zijn we begonnen bij de basis, zoals eerder vermeld was alles nieuw voor mij dus de basis bleek al een 
+                    uitdaging. We zijn begonnen met het programeren van alle sensoren appart van elkaar, op deze manier kon ik gemakkelijk kennis maken met het 
+                    werken binnen visual studio code. Naast het programeren van de chip moesten de onderdelen ook op de juiste manier verbonden worden met de 
+                    PCB. Dit vond ik vooral erg leuk, het puzzelen met deze onderdelen en het monteren van de draden op de juiste plek. De verschillende sensoren 
+                    appart van elkaar zijn hieronder weergeven. 
+                </p>
+                <img class="logo" src="images/1. Tomas/1. Licht sensor.jpg" alt="Licht sensor" width="300" height="200"> 
+                <img class="logo" src="images/1. Tomas/2. Vocht sensor.jpg" alt="Vocht sensor" width="300" height="200"> 
+                <img class="logo" src="images/1. Tomas/3. Temperatuur sensor.jpg" alt="Temperatuur sensor" width="300" height="200"> 
+                <img class="logo" src="images/1. Tomas/4. Klikaan-klikuit.jpg" alt="Klikaan-klikuit" width="300" height="200"> 
+                <img class="logo" src="images/1. Tomas/5. Relais en pomp.jpg" alt="Relais en pomp" width="300" height="200"> 
+                <p> Nadat ik alle onderdelen appart van elkaar geprogrammeerd had moesten ze in één code verwerkt worden. Dit zou de definitieve code worden 
+                    waarmee ik de PCB aan kan sturen om de plant water te geven wanneer deze dat nodig heeft en een lamp aan te zetten wanneer het te lang donker
+                    is geweest. Ik ben begonnen met de vocht sensor als basis te pakken en vervolgens de andere sensoren hierin bij te voegen. Het toevoegen 
+                    van de andere chips is mij echter helaas niet gelukt, telkens wanneer ik een andere sensor toe voeg komen er errors naar boven en door het 
+                    gebrek aan kennis over dit onderwerp is het mij niet gelukt om deze errors te verhelpen. Ik heb andere studenten geraadpleegd maar ook zij 
+                    wisten niet hoe ik deze problemen kon verhelpen. 
+                </p>
+                <p> Om te zorgen dat in het eindresultaat niet allemaal losse draden aanwezig zijn heb ik een printplaat ontworpen waarin de meeste draden 
+                    verwerkt zijn. Op deze printplaat heb vervolgens de PCB vast gemonteerd, dit heb ik gedaan doormiddel van solderen. Om te zorgen dat de PCB
+                    nog los te halen is van de printplaat heb ik een aantal opzet stukken gebruikt, deze heb ik aan de printplaat vast gesoldeerd. Indien de 
+                    printplaat kapot gaat kan ik de PCB er altijd nog vanaf halen. Hieronder heb ik een aantal foto's toegevoegd van het soldeerwerk en de 
+                    printplaat. 
+                </p>
+                <img class="logo" src="images/1. Tomas/Printplaat ontwerp.png" alt="Printplaat ontwerp" width="200" height="200"> 
+                <img class="logo" src="images/1. Tomas/Printplaat.jpg" alt="Printplaat" width="300" height="200"> 
+                <img class="logo" src="images/1. Tomas/Soldeerwerk.jpg" alt="Soldeerwerk" width="300" height="200"> 
+                <img class="logo" src="images/1. Tomas/printplaat boven.jpg" alt="printplaat boven" width="300" height="200"> 
+                <img class="logo" src="images/1. Tomas/Printplaat zij.jpg" alt="Printplaat zij" width="300" height="200"> 
+                <p> Tot slot moet er ook een doosje gemaakt worden waar alle sensoren in afgewerkt kunnen worden. Dit doosje dien ik te 
+                    maken met behulp van een 3D printer, om dit mogelijk te maken moet er eerst een 3D ontwerp van gemaakt worden. Dit ontwerp heb ik in 
+                    SolidWorks gemaakt, dit was de eerste keer dat ik met dit programma gewerkt heb. 
+                </p>
+
+                <h4>Result</h4>
+                <p> In de eerste les van Smart Connection hebben we voor het eerst kennis gemaakt met het schrijven in de taal HTML en CSS. Hierbij zijn
+                    we begonnen met het maken van een site zonder het gebruik van CSS opmaak, hierna hebben we een CSS opmaak toegevoegd aan deze site.
+                    Hierdoor is het erg duidelijk om te zien wat de CSS doet. Ik had voorafgaand aan deze minor nog nooit gebruik gemaakt van HTML of CSS 
+                    of iets wat hier op lijkt. Ik vond het persoonlijk erg indrukwekkend om te zien wat ik na één les al had bereikt. In basis taal kan ik 
+                    een site vanuit niks maken, daarnaast kan ik deze vorm geven doormiddel van kleuren en afbeeldingen toe te voegen.
+                </p>
+                <br>
+                
             <h2>Smart Connection</h2>
                 <p> In dit hoofdstuk benoem ik wat ik geleerd heb gedurende de lessen Smart Connection. Ik pak een aantal onderwerpen er tussenuit omdat ik deze 
                     opvallend of leerzaam vind. 
