--- a/tomas_workshops.html
+++ b/tomas_workshops.html
@@ -104,11 +104,11 @@
                     PCB. Dit vond ik vooral erg leuk, het puzzelen met deze onderdelen en het monteren van de draden op de juiste plek. De verschillende sensoren 
                     appart van elkaar zijn hieronder weergeven. 
                 </p>
-                <img class="logo" src="images/1. Tomas/1. Licht sensor.jpg" alt="Licht sensor" width="300" height="200"> 
-                <img class="logo" src="images/1. Tomas/2. Vocht sensor.jpg" alt="Vocht sensor" width="300" height="200"> 
-                <img class="logo" src="images/1. Tomas/3. Temperatuur sensor.jpg" alt="Temperatuur sensor" width="300" height="200"> 
-                <img class="logo" src="images/1. Tomas/4. Klikaan-klikuit.jpg" alt="Klikaan-klikuit" width="300" height="200"> 
-                <img class="logo" src="images/1. Tomas/5. Relais en pomp.jpg" alt="Relais en pomp" width="300" height="200"> 
+                <img class="logo" src="images/1. Tomas/1. Licht sensor.jpg" alt="Licht sensor" width="250" height="167"> 
+                <img class="logo" src="images/1. Tomas/2. Vocht sensor.jpg" alt="Vocht sensor" width="250" height="167"> 
+                <img class="logo" src="images/1. Tomas/3. Temperatuur sensor.jpg" alt="Temperatuur sensor" width="250" height="167"> 
+                <img class="logo" src="images/1. Tomas/4. Klikaan-klikuit.jpg" alt="Klikaan-klikuit" width="250" height="167"> 
+                <img class="logo" src="images/1. Tomas/5. Relais en pomp.jpg" alt="Relais en pomp" width="250" height="167"> 
                 <p> Nadat ik alle onderdelen appart van elkaar geprogrammeerd had moesten ze in één code verwerkt worden. Dit zou de definitieve code worden 
                     waarmee ik de PCB aan kan sturen om de plant water te geven wanneer deze dat nodig heeft en een lamp aan te zetten wanneer het te lang donker
                     is geweest. Ik ben begonnen met de vocht sensor als basis te pakken en vervolgens de andere sensoren hierin bij te voegen. Het toevoegen 
@@ -122,22 +122,34 @@
                     printplaat kapot gaat kan ik de PCB er altijd nog vanaf halen. Hieronder heb ik een aantal foto's toegevoegd van het soldeerwerk en de 
                     printplaat. 
                 </p>
-                <img class="logo" src="images/1. Tomas/Printplaat ontwerp.png" alt="Printplaat ontwerp" width="200" height="200"> 
-                <img class="logo" src="images/1. Tomas/Printplaat.jpg" alt="Printplaat" width="300" height="200"> 
-                <img class="logo" src="images/1. Tomas/Soldeerwerk.jpg" alt="Soldeerwerk" width="300" height="200"> 
-                <img class="logo" src="images/1. Tomas/printplaat boven.jpg" alt="printplaat boven" width="300" height="200"> 
-                <img class="logo" src="images/1. Tomas/Printplaat zij.jpg" alt="Printplaat zij" width="300" height="200"> 
+                <img class="logo" src="images/1. Tomas/Printplaat schematics.png" alt="Printplaat schematics" width="165" height="167"> 
+                <img class="logo" src="images/1. Tomas/Printplaat ontwerp.png" alt="Printplaat ontwerp" width="165" height="167"> 
+                <img class="logo" src="images/1. Tomas/Printplaat.jpg" alt="Printplaat" width="250" height="167"> 
+                <img class="logo" src="images/1. Tomas/Soldeerwerk.jpg" alt="Soldeerwerk" width="250" height="167"> 
+                <img class="logo" src="images/1. Tomas/printplaat boven.jpg" alt="printplaat boven" width="250" height="167"> 
+                <img class="logo" src="images/1. Tomas/Printplaat zij.jpg" alt="Printplaat zij" width="250" height="167"> 
                 <p> Tot slot moet er ook een doosje gemaakt worden waar alle sensoren in afgewerkt kunnen worden. Dit doosje dien ik te 
                     maken met behulp van een 3D printer, om dit mogelijk te maken moet er eerst een 3D ontwerp van gemaakt worden. Dit ontwerp heb ik in 
-                    SolidWorks gemaakt, dit was de eerste keer dat ik met dit programma gewerkt heb. 
+                    SolidWorks gemaakt, dit was de eerste keer dat ik met dit programma gewerkt heb. Het was dan ook erg fijn dat we les hebben gekregen over het 
+                    werken met dit programma, echter was het jammer dat deze lessen meer over de geschiedenis en de toepasingen van 3D printen gingen dan over het
+                    werken met het programma. Ondanks dit ben ik trost op mijzelf voor het eindresultaat van de 3D print, een aantal afbeeldingen van zowel het 
+                    ontwerp als het eindresultaat heb ik hieronder toegevoegd.
                 </p>
-
+                <img class="logo" src="images/1. Tomas/Bakje bovenaanzicht.png" alt="Bakje bovenaanzicht" width="250" height="167"> 
+                <img class="logo" src="images/1. Tomas/Bovenaanzicht bakje.png" alt="Bovenaanzicht bakje" width="200" height="167"> 
+                <img class="logo" src="images/1. Tomas/Doorsnede bakje.png" alt="Doorsnede bakje" width="250" height="167"> 
+                <img class="logo" src="images/1. Tomas/Bakje geheel.jpg" alt="Bakje geheel" width="125" height="167"> 
                 <h4>Result</h4>
-                <p> In de eerste les van Smart Connection hebben we voor het eerst kennis gemaakt met het schrijven in de taal HTML en CSS. Hierbij zijn
-                    we begonnen met het maken van een site zonder het gebruik van CSS opmaak, hierna hebben we een CSS opmaak toegevoegd aan deze site.
-                    Hierdoor is het erg duidelijk om te zien wat de CSS doet. Ik had voorafgaand aan deze minor nog nooit gebruik gemaakt van HTML of CSS 
-                    of iets wat hier op lijkt. Ik vond het persoonlijk erg indrukwekkend om te zien wat ik na één les al had bereikt. In basis taal kan ik 
-                    een site vanuit niks maken, daarnaast kan ik deze vorm geven doormiddel van kleuren en afbeeldingen toe te voegen.
+                <p> Als ik terug kijk op al deze lessen, workshops en opdrachten valt het mij op dat zelfs wanneer ik ergens totaal geen kennis van heb en ik 
+                    enorm op zie tegen het feit dat ik een bepaalde opdracht moet maken, het mij alsnog lukt indien ik gewoon hulp vraag wanneer dit nodig is. 
+                    Hoe moeilijk het soms ook is om iets volledig nieuws te leren en hoe vervelend het ook is om in het diepe gegooit te worden, alles kan je 
+                    leren als je vragen stelt en je er aan overgeeft om het te leren. 
+                </p>
+                <p> Zoals eerder vermeld was het programmeren voor mij de grootste uitdaging in deze minor en toch had ik na de eerste les van Smart Technology 
+                    al een chip geprogrammeerd. Het is me helaas niet gelukt om alle apparte taken van de PCB samen te voegen in één document, dit komt deels 
+                    door het gebrek aan kennis echter als ik meer tijd hiervoor had genomen had ik een dag samen kunnen gaan zitten met een docent of medestudent.
+                    Nu moest ik het doen met enkel app contact met medestudenten, hier heb ik de laatste stap helaas niet gehaald. Echter ben ik nogsteeds enorm
+                    tevreden met hoe ver ik wel ben gekomen en hoeveel ik heb geleerd de afgelopen weken. 
                 </p>
                 <br>
                 
