tekst toegevoegd hieke

--- a/hieke_workshops.html
+++ b/hieke_workshops.html
@@ -43,10 +43,15 @@
 
                 <h4>Business Model Canvas</h4>
                     <p> Tijdens een Smart Business-les kwam er een gastspreker die ons meenam in de structuur van een BMC (Business Model Canvas).
-                    Terwijl dit voor de businessstudenten al bekend terrein was, was het voor mij als technische student de eerste kennismaking met dit model.
-                    Ik luisterde aandachtig naar zijn uitleg en probeerde zoveel mogelijk op te nemen. Vervolgens kregen we de opdracht om in groepjes een BMC op te stellen voor autoverzekeringen.
-                    Dit dwong me om op een andere manier naar het BMC te kijken en er dieper over na te denken.
-                    Hierbij vroeg ik hulp aan de businessstudenten, die het model al begrepen, en samen kwamen we tot een model dat bij het pitchen als zeer compleet werd beschouwd.
+                        Hij bracht een casus mee van het bedrijf AXA, dat auto's in Turkije verzekert.
+                        Na een korte uitleg over wat een Business Model Canvas (BMC) inhoudt, was het onze taak om een BMC op te stellen voor deze casus.
+                        Ik had nog nooit eerder van een BMC gehoord.
+                        Met behulp van de informatie uit de les en de ondersteuning van mijn medestudenten in het groepje waar ik mee samenwerkte, kon ik input leveren en veel leren over wat een BMC is.
+                        In mijn studie civiele techniek had ik hier namelijk nog nooit mee te maken gehad, maar de medestudenten met een bedrijfskundige achtergrond konden me hier goed bij helpen.
+                    </p>
+                    <p> Ik ben tot de ontdekking gekomen dat het opstellen van een BMC (Business Model Canvas) een belangrijke stap is in het proces van begrijpen, analyseren en visualiseren van het bedrijfsmodel van een organisatie.
+                        Het biedt namelijk veel overzicht en inzicht in het bedrijf.
+                        Tot slot is het onderstaande BMC-model onder andere door mij ingevuld.
                     </p>
                     <img class="logo" src="images/BMI van AXA.jpg" alt="BMI van AXA" width="300" height="200"> 
                    
@@ -56,7 +61,7 @@
                     </p>
                     <img class="logo" src="images/Smartbox AXA.jpg" alt="Smartbox" width="300" height="200"> 
 
-                 <h4>onderwerp</h4>
+                 <h4>BMC van Giesbers</h4>
                     <p> 1e kopje
                     </p>
                     <iframe src="files/business-model-canvas Giesbers.pdf" name="business-model-canvas Giesbers">
@@ -83,6 +88,12 @@
                         Het bleek dat ik inderdaad de kleinste printplaat had ontworpen.
                     </p>
                     
+                    <img class="logo" src="link" alt="naam" width="300" height="200"> 
+                    <img class="logo" src="link" alt="naam" width="300" height="200"> 
+                    <img class="logo" src="link" alt="naam" width="300" height="200"> 
+                    <img class="logo" src="link" alt="naam" width="300" height="200"> 
+                    <img class="logo" src="link" alt="naam" width="300" height="200"> 
+
                 <h5>onderwerp</h5>
                     <div class="fakeimg" style="height:200px;">Image</div>
                     <p>1e kopje
@@ -90,12 +101,17 @@
                     <p> 2e kopje
                     </p>
 
+                    <img class="logo" src="link" alt="naam" width="300" height="200"> 
+                    <img class="logo" src="link" alt="naam" width="300" height="200"> 
+                    <img class="logo" src="link" alt="naam" width="300" height="200"> 
+                    <img class="logo" src="link" alt="naam" width="300" height="200"> 
+                    <img class="logo" src="link" alt="naam" width="300" height="200"> 
 
             <h2>Smart Connection</h2>
                 <p> Inleiding
                 </p>
                 <h4>onderwerp</h4>
-                    <p> -	Tijdens de Smart Connection-les ben ik buiten mijn eigen vakgebied getreden en heb ik kennis gemaakt met HTML.
+                    <p> Tijdens de Smart Connection-les ben ik buiten mijn eigen vakgebied getreden en heb ik kennis gemaakt met HTML.
                         Dit aspect staat haaks op mijn technische studie, wat mijn interesse in dit onderdeel van de minor heeft aangewakkerd.
                         In de allereerste les slaagde ik er al in om een website aan te passen door video's en foto's toe te voegen, en tekst te wijzigen in grootte en dikte.
                         Deze aanpassingen voerde ik uit door HTML-code toe te voegen of aan te passen in het programma Visual Studio Code.
